# controller/task_controller.js
@@ -2,7 +2,7 @@ const mongoose = require("mongoose");
 const User = require("../model/user");
 const Task = require("../model/task");
 const taskService = require("../services/task_service");
-const userService = require("../services/user_service");
+const userService = require("../services/admin_service");
 const nodemailer = require("nodemailer");
 require("dotenv").config();
 
@@ -35,6 +35,8 @@ exports.createTask = async (req, res) => {
 
 exports.getAllTasks = async (req, res) => {
   try {
+    const user = req.loggedInUser;
+    if(user.role != "Admin") throw new Error("User not authorized to view all tasks");
     const tasks = await taskService.getAllTasks();
     res.status(200).send(tasks);
   } catch (error) {
@@ -48,7 +50,9 @@ exports.getAllTasks = async (req, res) => {
 exports.getTask = async (req, res) => {
   try {
     const id = req.params.id;
+    const user = req.loggedInUser;
     const task = await taskService.getTask(id);
+    if((user._id.toString() != task.createdBy.toString()) || (user.role != "Admin") ) throw new Error("User not authorized to view the task");
     res.status(200).send(task);
   } catch (error) {
     console.log(error);
@@ -63,7 +67,7 @@ exports.deleteTask = async (req, res) => {
     const id = req.params.id;
     const user = req.loggedInUser;
     const task = await taskService.getTask(id);
-    if (user._id.toString() != task.createdBy.toString()) {
+    if ((user._id.toString() != task.createdBy.toString()) || (user.role != "Admin") ) {
       throw new Error("User not authorized to delete the task");
     }
     const result = await taskService.deleteTask(id);
@@ -84,7 +88,7 @@ exports.assignTask = async (req, res) => {
     const user = req.loggedInUser;
     const { assigneeEmail } = req.body;
     const task = await taskService.getTask(id);
-    if (user._id.toString() != task.createdBy.toString()) {
+    if (user._id.toString() != task.createdBy.toString() || (user._id.toString() != task.assignee.toString())) {
       throw new Error("User not authorized to assign the task");
     }
     const result = await taskService.assignTask(id, assigneeEmail);
